--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
-body {
-  background-color: darkgreen;
+/*RESEST*/
+*, *::before, *::after {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: inherit;
+  outline: 0 none;
+}
+
+:root {
+  font-size: 0.785rem;
 }/*# sourceMappingURL=style.css.map */
